webp images, removed redundant imports and variables

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@
 }
 
 body {
-  background-image: url('assets/Images/background.png');
+  background-image: url('assets/Images/background.webp');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
