--- a/src/App.css
+++ b/src/App.css
@@ -641,7 +641,11 @@ body {
   }
   
   .fantasy-attribute-item {
-    padding: 8px 10px;
+ padding: 8px 10px;
+  display: flex;
+  flex-wrap: wrap; /* Разрешаем перенос */
+  gap: 8px; /* Отступ между элементами */
+
   }
   
   .fantasy-btn { padding: 10px 14px; font-size: 0.9em; }
